--- a/DevTestGersztyn/DevTestGersztyn.vbproj
+++ b/DevTestGersztyn/DevTestGersztyn.vbproj
@@ -67,6 +67,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -89,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreateRequest.vb" />
+    <Compile Include="DataHandler.vb" />
     <Compile Include="FormTrackingDisplay.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -171,6 +174,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
